package trade.javiergutierrez.quizharvestserver.model;

public enum Evaluation {
  FIRST,
  SECOND
}
