package trade.javiergutierrez.quizharvestserver.model;

public enum Subject {
  DATABASES,
  ENVIRONMENTS,
  WORKPLACE,
  MARKUP,
  PROGRAMMING,
  SYSTEMS,
  CLIENT,
  SERVER,
  DEPLOYMENT,
  INTERFACE,
  BUSINESS,
  ELECTIVE
}
